Updated base hardware configuration files

--- a/hardware/base/etc/dnsmasq.d/wdln.conf
+++ b/hardware/base/etc/dnsmasq.d/wdln.conf
@@ -1,3 +1,12 @@
-interface=wlan0
+interface=eth0
+interface=eth1
+
 domain=wildfiredln.org,192.168.6.0/24
-dhcp-range=192.168.6.100,192.168.6.200,12h
+dhcp-range=set:mesh,192.168.6.2,192.168.6.200,12h
+dhcp-range=set:ma,192.168.1.1,192.168.1.1,12h
+
+dhcp-option=mesh,3,192.168.6.1
+dhcp-option=ma,3
+dhcp-option=mesh,6,192.168.6.1,8.8.8.8
+dhcp-option=ma,6,192.168.1.99,8.8.8.8
+
