--- a/ATAK/plugins-civ/plugins/wildfire-dln/gradle/wrapper/gradle-wrapper.properties
+++ b/ATAK/plugins-civ/plugins/wildfire-dln/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
-#Fri May 05 09:02:16 EDT 2017
+#Wed Dec 06 11:51:31 EST 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.5-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
+
