--- a/ATAK/plugins-civ/plugins/wildfire-dln/AndroidManifest.xml
+++ b/ATAK/plugins-civ/plugins/wildfire-dln/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application 
         android:allowBackup="false"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/wdln_48x48"
         android:label="WildfireDLN"
         android:description="@string/app_desc"
 
