--- a/ATAK/plugins-civ/plugins/wildfire-dln/build.gradle
+++ b/ATAK/plugins-civ/plugins/wildfire-dln/build.gradle
@@ -4,9 +4,12 @@
         maven {
            url 'https://maven.google.com'
         }
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.volley:volley:1.1.0'
+
     }
  }
 
@@ -30,7 +33,7 @@ dependencies {
     provided files('../../main.jar')
 
     compile fileTree(dir: 'libs', include: '*.jar')
-
+    compile 'com.android.volley:volley:1.1.0'
 }
 
 def getSvnRevision() {
@@ -124,4 +127,5 @@ android {
 
  repositories {
      google()
+     jcenter()
  }
