--- a/docker/ferry/unis.conf
+++ b/docker/ferry/unis.conf
@@ -3,7 +3,7 @@
 [program:unis]
 process_name = periscoped
 environment = PERISCOPE_ROOT=/home/wdln/.periscope,PYTHON_EGG_CACHE=/home/wdln/.cache
-command = periscoped --port=9000 -d DEBUG
+command = periscoped --port=9000 -d __DEBUG__
 user=wdln
 directory=/home/wdln
 autostart=true
