--- a/ATAK/plugins-civ/plugins/wildfire-dln/build.gradle
+++ b/ATAK/plugins-civ/plugins/wildfire-dln/build.gradle
@@ -5,10 +5,14 @@
            url 'https://maven.google.com'
         }
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.1'
         classpath 'com.android.volley:volley:1.1.0'
+        // https://mvnrepository.com/artifact/org.apache.commons/commons-io
+        classpath 'org.apache.commons:commons-io:1.3.2'
+
 
     }
  }
@@ -30,10 +34,11 @@ dependencies {
 
     // strictly for the plugin sdk do not remove 
     // (does not get used in the regular tree)
-    provided files('../../main.jar')
+    compileOnly files('../../main.jar')
 
-    compile fileTree(dir: 'libs', include: '*.jar')
-    compile 'com.android.volley:volley:1.1.0'
+    implementation fileTree(dir: 'libs', include: '*.jar')
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'org.apache.commons:commons-io:1.3.2'
 }
 
 def getSvnRevision() {
@@ -58,7 +63,7 @@ def getSvnRevision() {
 
 android {
     compileSdkVersion 15
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
 
    dexOptions {
         jumboMode = true
@@ -110,7 +115,7 @@ android {
         }
 
         // Move the tests to tests/java, tests/res, etc...
-        instrumentTest.setRoot('tests')
+        androidTest.setRoot('tests')
 
         // Move the build types to build-types/<type>
         // For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
