update docker env for 3 ferries and fixed base location port exposed for wdln-ferry-01, for ATAK testing

--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -39,7 +39,8 @@ RUN bash ./build.sh
 ADD base.conf /etc/supervisor/conf.d/
 ADD unis.conf /etc/supervisor/conf.d/
 ADD properties.js $HOME/dlt-web/
+ADD settings.py $HOME/wildfire-dln/ferry/ferry/
 
-ENV DEBUG INFO
+ENV DEBUG DEBUG
 ADD run.sh .
 CMD bash ./run.sh
