--- a/ATAK/plugins-civ/plugins/wildfire-dln/AndroidManifest.xml
+++ b/ATAK/plugins-civ/plugins/wildfire-dln/AndroidManifest.xml
@@ -3,10 +3,12 @@
     android:versionCode="1"
     android:versionName="DEV" >
 
-    <uses-sdk android:minSdkVersion="17" android:targetSdkVersion="19" />
+    <!--uses-sdk android:minSdkVersion="17" android:targetSdkVersion="19" /-->
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="false"
@@ -16,6 +18,14 @@
 
         android:theme="@style/AppTheme" >
         <meta-data android:name="plugin-api" android:value="com.atakmap.app@3.6.1.civ"/>
+
+        <activity android:name="com.atakmap.android.wildfiredln.UploadChooserActivity"
+            android:label="WDLN File Upload"
+            android:theme="@android:style/Theme.Dialog">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
 
     </application>
 
