Used default host in idms

--- a/hardware/base/etc/supervisor/conf.d/idms.conf
+++ b/hardware/base/etc/supervisor/conf.d/idms.conf
@@ -3,7 +3,7 @@
 [program:idms]
 process_name = idms
 environment = PERISCOPE_ROOT=/home/wdln/.periscope,PYTHON_EGG_CACHE=/home/wdln/.cache
-command = idms -u http://wdln-base:9000 -H wdln-idms -p 9001 -d DEBUG -v http://wdln-base -q 42424
+command = idms -u http://wdln-base:9000 -p 9001 -d DEBUG -v http://wdln-base -q 42424
 user=wdln
 directory=/home/wdln
 autostart=true
