--- a/lora/makefile
+++ b/lora/makefile
@@ -1,8 +1,8 @@
-rpi : whisper_lora_rpi.h whisper_c_rpi.cpp
-	g++ -Wall -o whisper_c -lwiringPi -pthread whisper_c_rpi.cpp 
+rpi : whisper_lora_rpi.h whisper_c.cpp
+	g++ -Wall -o whisper_c -lwiringPi -pthread whisper_c.cpp 
 
-up : whisper_lora_up.h whisper_c_up.cpp
-	g++ -Wall -o whisper_c  -pthread whisper_c_up.cpp -lmraa
+up : whisper_lora_up.h whisper_c.cpp
+	g++ -Wall -o whisper_c  -pthread whisper_c.cpp -lmraa
 
 clean :
 	rm -rf __pycache__ edit whisper_c *.o a.out *.pyc *.csv
