--- a/lora/makefile
+++ b/lora/makefile
@@ -1,11 +1,9 @@
-rpi : whisper_lora_rpi.h whisper_c.cpp
-	g++ -Wall -o whisper_c -lwiringPi -pthread whisper_c.cpp 
-
-up : whisper_lora_up.h whisper_c.cpp
-	g++ -Wall -o whisper_c  -pthread whisper_c.cpp -lmraa
+rpi : lora_rpi.h lora_c.cpp
+	g++ -Wall -o lora_c -lwiringPi -pthread lora_c.cpp 
+ 
+up : lora_up.h lora_c.cpp
+	g++ -Wall -o lora_c  -pthread lora_c.cpp -lmraa
 
 clean :
-	rm -rf __pycache__ edit whisper_c *.o a.out *.pyc *.csv
+	rm -rf __pycache__ edit lora_c *.o a.out *.pyc *.csv
 
-run:
-	xvfb-run -a python3 whisper.py
