--- a/ATAK/plugins-civ/plugins/wildfire-dln/AndroidManifest.xml
+++ b/ATAK/plugins-civ/plugins/wildfire-dln/AndroidManifest.xml
@@ -3,22 +3,21 @@
     android:versionCode="1"
     android:versionName="DEV" >
 
-    <!--uses-sdk android:minSdkVersion="17" android:targetSdkVersion="19" /-->
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application
+    <application 
         android:allowBackup="false"
         android:icon="@drawable/wdln_48x48"
-        android:label="WildfireDLN"
+        android:label="@string/app_name"
         android:description="@string/app_desc"
-
         android:theme="@style/AppTheme" >
-        <meta-data android:name="plugin-api" android:value="com.atakmap.app@3.6.1.civ"/>
-
+        <meta-data android:name="plugin-api" android:value="${atakApiVersion}"/>
+        <meta-data android:name="app_desc" android:value="@string/app_desc"/>
+        
         <activity android:name="com.atakmap.android.wildfiredln.UploadChooserActivity"
             android:label="WDLN File Upload"
             android:theme="@android:style/Theme.Dialog">
