updated default configuration for ferry

--- a/hardware/common/etc/dlt/ibp.cfg
+++ b/hardware/common/etc/dlt/ibp.cfg
@@ -6,6 +6,7 @@ interfaces=0.0.0.0:6714
 port=6714
 lazy_allocate=1
 threads=16
+max_pending=1024
 log_file=/var/log/dlt/ibp_server.log
 activity_file=/var/log/dlt/ibp_activity.log
 
