Updated systemd configuration files

--- a/hardware/common/etc/dlt/ibp.cfg
+++ b/hardware/common/etc/dlt/ibp.cfg
@@ -8,6 +8,7 @@ lazy_allocate=1
 threads=16
 max_pending=1024
 log_file=/var/log/dlt/ibp_server.log
+log_level=20
 activity_file=/var/log/dlt/ibp_activity.log
 
 [resource 1]
