Temporarily removed prune script from setup

--- a/ATAK_WFDLN/plugins-civ/plugins/wildfire-dln/local.properties
+++ b/ATAK_WFDLN/plugins-civ/plugins/wildfire-dln/local.properties
@@ -6,3 +6,4 @@
 # header note.
 #Fri Nov 05 16:03:52 EDT 2021
 sdk.dir=/home/rwsawtel/Android/Sdk
+takdev.plugin=../../../../WDLN/atak-civ/atak-gradle-takdev.jar
