Extended timeouts on downloader agent

--- a/hardware/common/etc/systemd/system/dlnloader.service
+++ b/hardware/common/etc/systemd/system/dlnloader.service
@@ -5,7 +5,7 @@ Requires=unis.service
 
 [Service]
 Environment=PYTHONUNBUFFERED=true
-ExecStart=/usr/local/bin/gunicorn --access-logfile /var/log/dlt/loader_access.log --workers 9 --bind 0.0.0.0:80 "wdln.loader:main()"
+ExecStart=/usr/local/bin/gunicorn --timeout 420 --access-logfile /var/log/dlt/loader_access.log --workers 9 --bind 0.0.0.0:80 "wdln.loader:main()"
 StandardOutput=file:/var/log/dlt/loader.log
 Restart=always
 RestartSec=5
